Add base game and github actions deploy

--- a/index.html
+++ b/index.html
@@ -1,16 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+<head>
     <title>All Lights On</title>
-    <meta charset="utf-8" />
+    <meta charset="utf-8"/>
     <style>
-      body {
-        margin: 0;
-      }
+        body {
+            margin: 0;
+            background-color: #091b2f;
+        }
     </style>
     <script type="module" src="/src/index.ts"></script>
-  </head>
-  <body>
-    <div id="game"></div>
-  </body>
+</head>
+<body>
+<div id="game"></div>
+</body>
 </html>
