--- a/index.html
+++ b/index.html
@@ -22,6 +22,12 @@
             font-weight: normal;
             font-style: normal;
         }
+        @font-face {
+            font-family: "Jersey";
+            src: url("/assets/fonts/Jersey25-Regular.ttf") format("truetype");
+            font-weight: normal;
+            font-style: normal;
+        }
 
         body {
             margin: 0;
@@ -34,6 +40,7 @@
 <div style="font-family:Londrina; position:absolute; left:-1000px; visibility:hidden;">.</div>
 <div style="font-family:LondrinaBold; position:absolute; left:-1000px; visibility:hidden;">.</div>
 <div style="font-family:LondrinaThin; position:absolute; left:-1000px; visibility:hidden;">.</div>
+<div style="font-family:Jersey; position:absolute; left:-1000px; visibility:hidden;">.</div>
 <div id="game"></div>
 </body>
 </html>
