--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             font-style: normal;
         }
         @font-face {
-            font-family: "Jersey";
+            font-family: "ItemFont";
             src: url("/assets/fonts/Jersey25-Regular.ttf") format("truetype");
             font-weight: normal;
             font-style: normal;
@@ -40,7 +40,7 @@
 <div style="font-family:Londrina; position:absolute; left:-1000px; visibility:hidden;">.</div>
 <div style="font-family:LondrinaBold; position:absolute; left:-1000px; visibility:hidden;">.</div>
 <div style="font-family:LondrinaThin; position:absolute; left:-1000px; visibility:hidden;">.</div>
-<div style="font-family:Jersey; position:absolute; left:-1000px; visibility:hidden;">.</div>
+<div style="font-family:ItemFont; position:absolute; left:-1000px; visibility:hidden;">.</div>
 <div id="game"></div>
 </body>
 </html>
