--- a/index.html
+++ b/index.html
@@ -34,6 +34,10 @@
             background-color: #091b2f;
         }
     </style>
+    <link rel="icon" type="image/png" sizes="32x32" href="/assets/icons/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/assets/icons/favicon-16x16.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="/assets/icons/apple-touch-icon.png">
+    <link rel="manifest" href="/assets/icons/site.webmanifest">
     <script type="module" src="/src/index.ts"></script>
 </head>
 <body>
