Use generated textures to speed up rendering

--- a/index.html
+++ b/index.html
@@ -41,7 +41,10 @@
     <script type="module" src="/src/index.ts"></script>
 </head>
 <body>
-<div style="font-family:ItemFont, Monospaced, sans-serif; position:absolute; left:-1000px; visibility:hidden;">.</div>
+<div style="font-family:Londrina; position:absolute; left:-1000px; visibility:hidden;">.</div>
+<div style="font-family:LondrinaBold; position:absolute; left:-1000px; visibility:hidden;">.</div>
+<div style="font-family:LondrinaThin; position:absolute; left:-1000px; visibility:hidden;">.</div>
+<div style="font-family:ItemFont; position:absolute; left:-1000px; visibility:hidden;">.</div>
 <div id="game"></div>
 </body>
 </html>
